--- a/index.html
+++ b/index.html
@@ -3,10 +3,7 @@ layout: default
 title: Home
 ---
       <div class="side fl">
-         <div class="sideinner">
-        <h3><a href="#">Illustrations</a></h3>
-
-        </div> 
+         <img src="images/pozivnica3.jpg" alt="Wedding invitation"/>
       </div>
       
       <div class="main fr">
