Added lightbox on photos page

--- a/photos.html
+++ b/photos.html
@@ -2,4 +2,13 @@
 layout: default
 title: Photos
 ---
-      Photos
+
+<div class="gallery">
+<div class="fl"><a rel="lightbox-mygallery" href="images/photo/BDW+1.jpg"><img src="images/photo/thumb/BDW+1.jpg"/></a></div>
+<div class="fl"><a rel="lightbox-mygallery" href="images/photo/BDW+2.jpg"><img src="images/photo/thumb/BDW+2.jpg"/></a></div>
+<div class="fl"><a rel="lightbox-mygallery" href="images/photo/BDW+3.jpg"><img src="images/photo/thumb/BDW+3.jpg"/></a></div>
+<div class="fl"><a rel="lightbox-mygallery" href="images/photo/BDW+4.jpg"><img src="images/photo/thumb/BDW+4.jpg"/></a></div>
+<div class="clearfix"></div>
+<div class="fl"><a rel="lightbox-mygallery" href="images/photo/BDW+5.jpg"><img src="images/photo/thumb/BDW+5.jpg"/></a></div>
+<div class="fl"><a rel="lightbox-mygallery" href="images/photo/BDW+1.jpg"><img src="images/photo/thumb/BDW+1.jpg"/></a></div>
+</div>
