colorbox, resized illustrations to fit 800x600, base-url set to /manja

--- a/illustrations.html
+++ b/illustrations.html
@@ -2,7 +2,9 @@
 layout: default
 title: Illustrations
 ---
-      Illustrations
+
+
+
 <div class="gallery">
 <div class="fl"><a rel="lightbox-mygallery" href="images/illustrations/Sta nam koka daje 1.jpg"><img src="images/illustrations/thumb/Sta nam koka daje 1.jpg"/></a></div>
 <div class="fl"><a rel="lightbox-mygallery" href="images/illustrations/Sta nam koka daje 2.jpg"><img src="images/illustrations/thumb/Sta nam koka daje 2.jpg"/></a></div>
@@ -53,6 +55,10 @@ title: Illustrations
 <div class="fl"><a rel="lightbox-mygallery" href="images/illustrations/detektiv Njusic septembar.jpg"><img src="images/illustrations/thumb/detektiv Njusic septembar.jpg"/></a></div>
 <div class="fl"><a rel="lightbox-mygallery" href="images/illustrations/doodles 1.jpg"><img src="images/illustrations/thumb/doodles 1.jpg"/></a></div>
 <div class="fl"><a rel="lightbox-mygallery" href="images/illustrations/doodles 2.jpg"><img src="images/illustrations/thumb/doodles 2.jpg"/></a></div>
-<div class="fl"><a rel="lightbox-mygallery" href="images/illustrations/.Ekoloska knjiga 1.jpg"><img src="images/illustrations/thumb/Ekoloska knjiga 1.jpg"/></a></div>
+<div class="fl"><a rel="lightbox-mygallery" href="images/illustrations/Ekoloska knjiga 1.jpg"><img src="images/illustrations/thumb/Ekoloska knjiga 1.jpg"/></a></div>
 
 </div>
+
+<script>
+	$("a[rel='lightbox-mygallery']").colorbox();
+</script>
